--- a/extensions/Makefile.am
+++ b/extensions/Makefile.am
@@ -1,4 +1,4 @@
-nobase_lib_LTLIBRARIES = xtables/libxt_dns.la
-xtables_libxt_dns_la_SOURCES = libxt_dns.c
-xtables_libxt_dns_la_CFLAGS  = -lresolv -I../include
-xtables_libxt_dns_la_LDFLAGS = -version-info @VERSION_INFO@
+nobase_lib_LTLIBRARIES = libxt_dns.la
+libxt_dns_la_SOURCES = libxt_dns.c
+libxt_dns_la_CFLAGS  = -lresolv -I../include
+libxt_dns_la_LDFLAGS = -avoid-version
