--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -3,13 +3,12 @@ obj-m := xt_dns.o
 ccflags-y := -O3 -I$(src)/../include
 DEPMOD=/sbin/depmod
 INSTALL=/usr/bin/install -c
-KERNEL_RELEASE=`uname -r`
-BUILD_DIR=/lib/modules/$(KERNEL_RELEASE)/build
+BUILD_DIR := @KBUILDDIR@
 all:
 	$(MAKE) -C $(BUILD_DIR) M=$(PWD) modules
 clean:
 	$(MAKE) -C $(BUILD_DIR) M=$(PWD) clean
 install:
-	$(MAKE) INSTALL_MOD_DIR=kernel/net/netfilter -C $(BUILD_DIR) M=$(PWD) modules_install
+	$(MAKE) INSTALL_MOD_PATH=$(DESTDIR) -C $(BUILD_DIR) M=$(PWD) modules_install
 	$(DEPMOD) -A
 check:
